terraform/aws/apps/web-app/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  labels:
    app: web-app
    component: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
        component: frontend
    spec:
      containers:
      - name: web-app
        image: ghcr.io/guymoyo/web-app@sha256:a11138fe5902b8fd98f5a704aa534db4f260dd963c1de1037963c6ea0e8276cf
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
